--- a/mainservice/src/main/resources/application.properties
+++ b/mainservice/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=hsdfz2018
@@ -8,6 +7,7 @@ spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.application.name=main-service
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jackson.serialization.fail-on-empty-beans=false
 spring.thymeleaf.cache=false 
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.retries=3
@@ -18,14 +18,17 @@ spring.kafka.consumer.value-serializer=org.springframework.kafka.support.seriali
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.book_demo.entity
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.mainserivice.entity
 spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
 eureka.instance.ip-address=localhost
-
+spring.neo4j.uri=bolt://localhost:7687
+spring.neo4j.authentication.username=root
+spring.neo4j.authentication.password=hsdfz2018
 eureka.instance.prefer-ip-address=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
+spring.data.mongodb.database=bookstore
 
 eureka.client.service-url.defaultZone=http://localhost:8040/eureka
 server.port=8080
